feat(backend): refactor backend architecture to local relational catalog with on-demand ingestion
- Transition from legacy proxy architecture to local relational catalog on PostgreSQL
- Implement AniList and Kitsu GraphQL clients with AnimeFlix matching algorithm
- Add Flyway V1 migration with unaccent extension, immutable_unaccent wrapper and full-text GIN index
- Implement JPA entities (Media, Season, Episode, Recap, Feedback) conforming to project conventions
- Implement Richardson Level 2 REST Controllers with DTO records and full OpenAPI 3.0 documentation
- Implement centralized RFC 7807 ProblemDetail exception handling
- Add complete unit and integration test suite (32 passing tests)