@@ -1,152 +1,223 @@
 package com.recapme.service;
 
-import com.recapme.client.jikan.JikanClient;
-import com.recapme.client.tmdb.TmdbClient;
 import com.recapme.common.exception.ResourceNotFoundException;
 import com.recapme.dto.response.ListAllMediasResponseDto;
-import com.recapme.dto.response.MediaItemDto;
+import com.recapme.dto.response.ListAllSeasonsResponseDto;
+import com.recapme.dto.response.MediaSummaryDto;
 import com.recapme.dto.response.OneMediaResponseDto;
-import com.recapme.model.MediaModel;
-import com.recapme.model.MediaType;
+import com.recapme.dto.response.SeasonSummaryDto;
+import com.recapme.model.Media;
+import com.recapme.model.Season;
 import com.recapme.repository.MediaRepository;
+import com.recapme.repository.SeasonRepository;
+import jakarta.persistence.criteria.Join;
+import jakarta.persistence.criteria.Predicate;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.annotation.Cacheable;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class MediaService {
 
-    private final TmdbClient tmdbClient;
-    private final JikanClient jikanClient;
     private final MediaRepository mediaRepository;
+    private final SeasonRepository seasonRepository;
+    private final MediaIngestionService mediaIngestionService;
 
-    @Cacheable(value = "search-medias", key = "#query + '-' + #type")
-    public ListAllMediasResponseDto search(String query, MediaType type) {
+    @Transactional(readOnly = true)
+    public ListAllMediasResponseDto listAll(int page, int size, String genre, String status, Integer year, String sort) {
+        Pageable pageable = createPageable(page, size, sort);
+
+        Specification<Media> spec = (root, query, cb) -> {
+            List<Predicate> predicates = new ArrayList<>();
+
+            if (genre != null && !genre.isBlank()) {
+                Join<Media, String> genresJoin = root.join("genres");
+                predicates.add(cb.equal(cb.lower(genresJoin), genre.trim().toLowerCase()));
+            }
+
+            if (status != null && !status.isBlank()) {
+                predicates.add(cb.equal(cb.upper(root.get("status")), status.trim().toUpperCase()));
+            }
+
+            if (year != null) {
+                predicates.add(cb.equal(root.get("seasonYear"), year));
+            }
+
+            if (query != null) {
+                query.distinct(true);
+            }
+
+            return cb.and(predicates.toArray(new Predicate[0]));
+        };
+
+        Page<Media> mediaPage = mediaRepository.findAll(spec, pageable);
+        return toListAllMediasResponseDto(mediaPage);
+    }
+
+    @Transactional
+    @Cacheable(value = "media-details", key = "#query + #page + #size")
+    public ListAllMediasResponseDto search(String query, int page, int size) {
         if (query == null || query.trim().isBlank()) {
-            return ListAllMediasResponseDto.builder().items(List.of()).total(0).build();
+            return ListAllMediasResponseDto.builder()
+                    .content(Collections.emptyList())
+                    .pageNumber(page)
+                    .pageSize(size)
+                    .totalElements(0)
+                    .totalPages(0)
+                    .isLast(true)
+                    .build();
         }
 
-        List<MediaItemDto> results = new ArrayList<>();
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Media> localResults = mediaRepository.searchByTitleUnaccent(query.trim(), pageable);
 
-        if (type == null || type == MediaType.ANIME) {
-            results.addAll(jikanClient.search(query));
+        // Lazy Ingestion: se nenhum resultado for encontrado localmente, busca e ingere no AniList/Kitsu
+        if (localResults.isEmpty() && page == 0) {
+            log.info("No local results for search query '{}'. Triggering lazy ingestion from AniList/Kitsu...", query);
+            try {
+                List<Media> ingested = mediaIngestionService.searchAndIngest(query.trim());
+                if (!ingested.isEmpty()) {
+                    localResults = mediaRepository.searchByTitleUnaccent(query.trim(), pageable);
+                }
+            } catch (Exception e) {
+                log.warn("Lazy ingestion failed for query '{}': {}", query, e.getMessage());
+            }
         }
 
-        if (type == null || type == MediaType.SERIES || type == MediaType.MOVIE) {
-            results.addAll(tmdbClient.search(query, type));
+        return toListAllMediasResponseDto(localResults);
+    }
+
+    @Transactional(readOnly = true)
+    @Cacheable(value = "media-details", key = "#id")
+    public OneMediaResponseDto getById(UUID id) {
+        Media media = mediaRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Media with identifier '" + id + "' was not found in local database"));
+
+        List<Season> seasons = seasonRepository.findByMediaIdOrderBySeasonNumberAsc(media.getId());
+        return toOneMediaResponseDto(media, seasons);
+    }
+
+    @Transactional
+    public OneMediaResponseDto forceIngest(Integer anilistId) {
+        log.info("Forcing ingestion for AniList ID: {}", anilistId);
+        Media media = mediaIngestionService.ingestByAnilistId(anilistId);
+        List<Season> seasons = seasonRepository.findByMediaIdOrderBySeasonNumberAsc(media.getId());
+        return toOneMediaResponseDto(media, seasons);
+    }
+
+    @Transactional(readOnly = true)
+    public ListAllSeasonsResponseDto getSeasonsByMediaId(UUID mediaId) {
+        if (!mediaRepository.existsById(mediaId)) {
+            throw new ResourceNotFoundException("Media with identifier '" + mediaId + "' was not found");
         }
 
-        return ListAllMediasResponseDto.builder()
-                .items(results)
-                .total(results.size())
+        List<Season> seasons = seasonRepository.findByMediaIdOrderBySeasonNumberAsc(mediaId);
+        List<SeasonSummaryDto> seasonSummaries = seasons.stream()
+                .map(this::toSeasonSummaryDto)
+                .collect(Collectors.toList());
+
+        return ListAllSeasonsResponseDto.builder()
+                .mediaId(mediaId)
+                .seasons(seasonSummaries)
                 .build();
     }
 
-    @Transactional
-    @Cacheable(value = "media-details", key = "#type.name() + '-' + #externalId")
-    public OneMediaResponseDto getDetails(MediaType type, String externalId) {
-        // Verificar se já existe na base
-        var existingMedia = mediaRepository.findByMediaTypeAndExternalId(type, externalId);
-        if (existingMedia.isPresent()) {
-            MediaModel m = existingMedia.get();
-            return toOneMediaResponseDto(m);
+    private Pageable createPageable(int page, int size, String sortParam) {
+        if (sortParam == null || sortParam.isBlank()) {
+            return PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "score"));
         }
 
-        // Caso contrário, consultar APIs externas
-        OneMediaResponseDto fetched = (type == MediaType.ANIME)
-                ? jikanClient.getDetails(externalId)
-                : tmdbClient.getDetails(externalId, type);
+        String[] parts = sortParam.split(",");
+        String property = parts[0].trim();
+        Sort.Direction direction = (parts.length > 1 && parts[1].trim().equalsIgnoreCase("asc"))
+                ? Sort.Direction.ASC
+                : Sort.Direction.DESC;
 
-        if (fetched == null) {
-            throw new ResourceNotFoundException("Media", type + ":" + externalId);
-        }
-
-        // Salvar na base local para indexação
-        MediaModel newMedia = new MediaModel();
-        newMedia.setExternalId(externalId);
-        newMedia.setMediaType(type);
-        newMedia.setTitle(fetched.getTitle());
-        newMedia.setOriginalTitle(fetched.getOriginalTitle());
-        newMedia.setOverview(fetched.getOverview());
-        newMedia.setPosterUrl(fetched.getPosterUrl());
-        newMedia.setBackdropUrl(fetched.getBackdropUrl());
-        newMedia.setReleaseYear(fetched.getReleaseYear());
-        newMedia.setTotalSeasons(fetched.getTotalSeasons() != null ? fetched.getTotalSeasons() : 1);
-        newMedia.setTotalEpisodes(fetched.getTotalEpisodes() != null ? fetched.getTotalEpisodes() : 1);
-        newMedia.setCreatedAt(LocalDateTime.now());
-        newMedia.setUpdatedAt(LocalDateTime.now());
-
-        try {
-            MediaModel saved = mediaRepository.save(newMedia);
-            fetched.setId(saved.getId().toString());
-            return fetched;
-        } catch (org.springframework.dao.DataIntegrityViolationException ex) {
-            log.info("Media {}:{} já persistida por requisição concorrente.", type, externalId);
-            return mediaRepository.findByMediaTypeAndExternalId(type, externalId)
-                    .map(this::toOneMediaResponseDto)
-                    .orElse(fetched);
-        }
+        return PageRequest.of(page, size, Sort.by(direction, property));
     }
 
-    @Transactional
-    public MediaModel getOrSaveMedia(MediaType type, String externalId, String title) {
-        var existing = mediaRepository.findByMediaTypeAndExternalId(type, externalId);
-        if (existing.isPresent()) {
-            return existing.get();
-        }
+    private ListAllMediasResponseDto toListAllMediasResponseDto(Page<Media> mediaPage) {
+        List<MediaSummaryDto> content = mediaPage.getContent().stream()
+                .map(this::toMediaSummaryDto)
+                .collect(Collectors.toList());
 
-        try {
-            getDetails(type, externalId);
-        } catch (Exception e) {
-            log.warn("Erro ao buscar detalhes para {}:{}: {}", type, externalId, e.getMessage());
-        }
-
-        return mediaRepository.findByMediaTypeAndExternalId(type, externalId)
-                .orElseGet(() -> {
-                    MediaModel m = new MediaModel();
-                    m.setExternalId(externalId);
-                    m.setMediaType(type);
-                    m.setTitle(title != null ? title : "Obra " + externalId);
-                    m.setCreatedAt(LocalDateTime.now());
-                    m.setUpdatedAt(LocalDateTime.now());
-                    try {
-                        return mediaRepository.save(m);
-                    } catch (org.springframework.dao.DataIntegrityViolationException ex) {
-                        return mediaRepository.findByMediaTypeAndExternalId(type, externalId)
-                                .orElseThrow(() -> new IllegalStateException("Concorrência ao salvar mídia"));
-                    }
-                });
+        return ListAllMediasResponseDto.builder()
+                .content(content)
+                .pageNumber(mediaPage.getNumber())
+                .pageSize(mediaPage.getSize())
+                .totalElements(mediaPage.getTotalElements())
+                .totalPages(mediaPage.getTotalPages())
+                .isLast(mediaPage.isLast())
+                .build();
     }
 
-    private OneMediaResponseDto toOneMediaResponseDto(MediaModel m) {
-        List<Integer> seasons = new ArrayList<>();
-        int totalSeasons = m.getTotalSeasons() != null ? m.getTotalSeasons() : 1;
-        for (int i = 1; i <= totalSeasons; i++) {
-            seasons.add(i);
-        }
+    private MediaSummaryDto toMediaSummaryDto(Media m) {
+        return MediaSummaryDto.builder()
+                .id(m.getId())
+                .anilistId(m.getAnilistId())
+                .titleRomaji(m.getTitleRomaji())
+                .titleEnglish(m.getTitleEnglish())
+                .titlePortuguese(m.getTitlePortuguese())
+                .synopsis(m.getSynopsis())
+                .coverImageUrl(m.getCoverImageUrl())
+                .bannerImageUrl(m.getBannerImageUrl())
+                .format(m.getFormat())
+                .status(m.getStatus())
+                .score(m.getScore())
+                .seasonYear(m.getSeasonYear())
+                .totalEpisodes(m.getTotalEpisodes())
+                .genres(m.getGenres())
+                .build();
+    }
+
+    private OneMediaResponseDto toOneMediaResponseDto(Media m, List<Season> seasons) {
+        List<SeasonSummaryDto> seasonSummaries = seasons.stream()
+                .map(this::toSeasonSummaryDto)
+                .collect(Collectors.toList());
 
         return OneMediaResponseDto.builder()
-                .id(m.getId().toString())
-                .externalId(m.getExternalId())
-                .type(m.getMediaType())
-                .source(m.getMediaType() == MediaType.ANIME ? "JIKAN" : "TMDB")
-                .title(m.getTitle())
-                .originalTitle(m.getOriginalTitle())
-                .overview(m.getOverview())
-                .posterUrl(m.getPosterUrl())
-                .backdropUrl(m.getBackdropUrl())
-                .releaseYear(m.getReleaseYear())
-                .totalSeasons(totalSeasons)
-                .totalEpisodes(m.getTotalEpisodes() != null ? m.getTotalEpisodes() : 1)
-                .availableSeasons(seasons)
+                .id(m.getId())
+                .anilistId(m.getAnilistId())
+                .kitsuId(m.getKitsuId())
+                .titleRomaji(m.getTitleRomaji())
+                .titleEnglish(m.getTitleEnglish())
+                .titlePortuguese(m.getTitlePortuguese())
+                .synopsis(m.getSynopsis())
+                .coverImageUrl(m.getCoverImageUrl())
+                .bannerImageUrl(m.getBannerImageUrl())
+                .format(m.getFormat())
+                .status(m.getStatus())
+                .score(m.getScore())
+                .seasonYear(m.getSeasonYear())
+                .seasonPeriod(m.getSeasonPeriod())
+                .durationMinutes(m.getDurationMinutes())
+                .totalEpisodes(m.getTotalEpisodes())
+                .genres(m.getGenres())
+                .seasons(seasonSummaries)
+                .build();
+    }
+
+    private SeasonSummaryDto toSeasonSummaryDto(Season s) {
+        return SeasonSummaryDto.builder()
+                .id(s.getId())
+                .seasonNumber(s.getSeasonNumber())
+                .title(s.getTitle())
+                .episodeCount(s.getEpisodeCount())
                 .build();
     }
 }
